--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
 }
+
 body{
     font-family: 'Cairo', sans-serif;
 }
@@ -82,11 +83,15 @@ body{
     margin-right: 10px;
 }
 
-/* @media (hover:hover) {
-    .cta-btn:hover{
-        background-color: rgb(192, 125, 0);
+@media (hover:hover) {
+    .call-us-cta-btn:hover{
+        color: var(--accent-color);
     }
-} */
+
+    .call-us-cta-btn:hover svg{
+        fill: var(--accent-color)
+    }
+}
 
 .call-us-cta-btn{
     background-color: transparent;
@@ -98,14 +103,6 @@ body{
 .call-us-cta-btn svg{
     fill: #fff;
     transition: 0.3s ease;
-}
-
-.call-us-cta-btn:hover{
-    color: var(--accent-color);
-}
-
-.call-us-cta-btn:hover svg{
-    fill: var(--accent-color)
 }
 
 .best-seller-section{
@@ -123,7 +120,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 300px;
+    width: 315px;
     height: 190px;
     border-radius: 20px;
     transform: translateY(-35px);
@@ -148,8 +145,12 @@ body{
 
 .best-seller-card a svg{
     fill: var(--accent-color);
-    margin-right: 7px;
+    margin-right: 4px;
     transform: translateY(3px);
+    transition: .1s ease-in;
+}
+.best-seller-card a:active svg{
+    transform: translate(-5px, 3px);
 }
 
 .best-seller-card .img-container{
@@ -168,14 +169,11 @@ body{
     z-index: 2;
 }
 
-#flip-me-pic{
-    transform: scaleX(-1);
-}
-
 .best-seller-card .img-container:after{
     content: '';
     position: absolute;
-    background-color: #dbede9;
+    background-color: #dfebe8;
+    opacity: 0.9;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -202,6 +200,8 @@ body{
     gap: 20px;
     /* margin: 0 20px; */
     flex-wrap: wrap;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 .category-container{
@@ -212,6 +212,7 @@ body{
     gap: 20px;
     height: 150px;
     width: 150px;
+    margin-top: 20px;
 }
 
 .category-container .category-img-container{
@@ -225,7 +226,8 @@ body{
 
 .category-container .category-img-container::after{
     content: '';
-    background-color: #dbede9;
+    background-color: #dfebe8;
+    opacity: 0.9;
     width: 120px;
     height: 120px;
     top: 50%;
@@ -303,4 +305,22 @@ body{
 }
 .why-us-card-subtitle{
     font-size: 1rem;
+}
+
+@media (min-width: 360px) and (max-width: 420px) {
+    .hero-content{
+        padding-right: 10px;
+    }
+    .hero-title{
+        font-size: 1.7rem;
+    }
+    .hero-subtitle{
+        margin-top: 10px;
+        font-size: 1rem;
+    }
+    .cta-btn{
+        width: 8rem;
+        height: 2.6rem;
+
+    }
 }
