--- a/style.css
+++ b/style.css
@@ -311,16 +311,34 @@ body{
     .hero-content{
         padding-right: 10px;
     }
+    .hero{
+        height: 23rem
+    }
+
     .hero-title{
         font-size: 1.7rem;
+        line-height: 60px;
     }
+
     .hero-subtitle{
         margin-top: 10px;
         font-size: 1rem;
     }
+
     .cta-btn{
         width: 8rem;
         height: 2.6rem;
+        font-size: 1rem;
+        margin-top: 20px;
+    }
 
+    .best-seller-cards-container{
+        flex-wrap: nowrap;
+    }
+    .best-seller-card{
+        clip-path: inset(-1000% 0% -1000% 0%);
+        flex-shrink: 0;
+        width: 200;
+        height: 100;
     }
 }
